force-app/main/default/objects/Opportunity/fields/Exec_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Exec_Sponsor_Name__c</fullName>
    <description>used in gong board</description>
    <label>Exec Sponsor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>