force-app/main/default/objects/Opportunity/fields/Executive_Request__c.field-meta.xml
<CustomField>
    <fullName>Executive_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Request</label>
    <referenceTo>Executive_Request__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>