force-app/main/default/objects/Opportunity/fields/Feature_Gap__c.field-meta.xml
<CustomField>
    <fullName>Feature_Gap__c</fullName>
    <label>Feature Gap</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Lost_Reason_new__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offcycle payments</fullName>
            </value>
            <value>
                <fullName>Missing integration</fullName>
            </value>
            <value>
                <fullName>Limited integration capabilities</fullName>
            </value>
            <value>
                <fullName>Customized payroll cycle</fullName>
            </value>
            <value>
                <fullName>Cutoff dates flexibility</fullName>
            </value>
            <value>
                <fullName>Platform language</fullName>
            </value>
            <value>
                <fullName>Contractor of Record (Deel Shield)</fullName>
            </value>
            <value>
                <fullName>HRIS capabilities</fullName>
            </value>
            <value>
                <fullName>Hourly pay</fullName>
            </value>
            <value>
                <fullName>Customize contracts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Missing ERP Integration</fullName>
            </value>
            <value>
                <fullName>Missing HRIS Integration</fullName>
            </value>
            <value>
                <fullName>No Contractor of Record (Deel Shield)</fullName>
            </value>
            <value>
                <fullName>No HRIS capabilities</fullName>
            </value>
            <value>
                <fullName>Other payroll capabilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>