force-app/main/default/objects/Opportunity/fields/First_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Date__c</fullName>
    <formula>IF(DATEVALUE(First_Sales_Event__c) &lt; BLANKVALUE(First_Sales_Task__c,DATE(1970,1,1)), DATEVALUE(First_Sales_Event__c), First_Sales_Task__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Sales Activity</label>
    <type>Date</type>
</CustomField>