force-app/main/default/objects/Opportunity/fields/First_Meeting_Held_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Held_Date__c</fullName>
    <description>Populated automatically.  The date that the first meeting&apos;s Demodesk status was set to Held.</description>
    <label>First Meeting Held Date</label>
    <type>Date</type>
</CustomField>