force-app/main/default/objects/Opportunity/fields/First_Meeting_Status_Demodesk__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Status_Demodesk__c</fullName>
    <description>Populated by DLRS.  &quot;Meeting Status (Demodesk)&quot; of the first event for this opportunity - no longer leveraging DD automation (keeping the API name to avoid issues with integrations)</description>
    <label>First Meeting Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>