force-app/main/default/objects/Opportunity/fields/First_Sales_Event__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Event__c</fullName>
    <description>Populated by DLRS</description>
    <label>First Sales Event</label>
    <type>DateTime</type>
</CustomField>