force-app/main/default/objects/Opportunity/fields/First_Sales_Task__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Task__c</fullName>
    <description>Populated by DLRS</description>
    <label>First Sales Task</label>
    <type>Date</type>
</CustomField>