force-app/main/default/objects/Opportunity/fields/Future_Sales_Activity_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Future_Sales_Activity_Opportunity__c</fullName>
    <formula>IF(DATEVALUE(Future_Sales_Event_Opportunity__c) &gt; BLANKVALUE(Future_Sales_Task_Opportunity__c,DATE(1970,1,1)), DATEVALUE(Future_Sales_Event_Opportunity__c), Future_Sales_Task_Opportunity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Sales Activity (Opportunity)</label>
    <type>Date</type>
</CustomField>