force-app/main/default/objects/Opportunity/fields/Future_Sales_Event_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Future_Sales_Event_Opportunity__c</fullName>
    <description>Populated by DLRS</description>
    <label>Future Sales Event (Opportunity)</label>
    <type>DateTime</type>
</CustomField>