force-app/main/default/objects/Opportunity/fields/Future_Sales_Task_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Future_Sales_Task_Opportunity__c</fullName>
    <description>Populated by DLRS</description>
    <label>Future Sales Task (Opportunity)</label>
    <type>Date</type>
</CustomField>