force-app/main/default/objects/Opportunity/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Used for Google Ads integration.</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>