force-app/main/default/objects/Opportunity/fields/Global_Payroll_Countries__c.field-meta.xml
<CustomField>
    <fullName>Global_Payroll_Countries__c</fullName>
    <description>List of countries where Global Payroll is needed. Added by AE on Opportunity Qualification. 
Required when Global Payroll product is added to the Opp.</description>
    <inlineHelpText>Please input countries where Global Payroll is wanted by the prospect.</inlineHelpText>
    <label>Global Payroll - Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>