force-app/main/default/objects/Opportunity/fields/Global_Payroll_Products__c.field-meta.xml
<CustomField>
    <fullName>Global_Payroll_Products__c</fullName>
    <description>Used for validation rules.</description>
    <label>Global Payroll Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>contains</operation>
        <value>Global Payroll</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>