force-app/main/default/objects/Opportunity/fields/global_payroll_TMs__c.field-meta.xml
<CustomField>
    <fullName>global_payroll_TMs__c</fullName>
    <description>Number of TMs for Global Payroll, input by BDR on Qualification</description>
    <inlineHelpText>Please add # of TMs scoped for the Global Payroll.</inlineHelpText>
    <label># global payroll TMs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>