force-app/main/default/objects/Opportunity/fields/GP_Countries_formula__c.field-meta.xml
<CustomField>
    <fullName>GP_Countries_formula__c</fullName>
    <description>Indicates no countries were chosen in the Field indicating in which countries GP is needed. Used for validation rule.</description>
    <formula>ISBLANK(Global_Payroll_Countries__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP Countries [formula]</label>
    <type>Checkbox</type>
</CustomField>