force-app/main/default/objects/Opportunity/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <description>calculates the gross amount as a roll up of all the opp product amounts, before the discount.</description>
    <label>Gross Amount</label>
    <summarizedField>OpportunityLineItem.amount_wo_discount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>