force-app/main/default/objects/Opportunity/fields/Handover_Count__c.field-meta.xml
<CustomField>
    <fullName>Handover_Count__c</fullName>
    <label>Handover Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>