force-app/main/default/objects/Opportunity/fields/Has_Discount__c.field-meta.xml
<CustomField>
    <fullName>Has_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked automatically when an opportunity product has a non-zero discount.</description>
    <label>Has Discount</label>
    <type>Checkbox</type>
</CustomField>