force-app/main/default/objects/Opportunity/fields/Hot_handoff__c.field-meta.xml
<CustomField>
    <fullName>Hot_handoff__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For the BDR to check for live hand-offs following the qualification call.</inlineHelpText>
    <label>Hot handoff</label>
    <type>Checkbox</type>
</CustomField>