force-app/main/default/objects/Opportunity/fields/HR_Tech_Stack_Integration__c.field-meta.xml
<CustomField>
    <fullName>HR_Tech_Stack_Integration__c</fullName>
    <description>Details the HR Tech Stack/Integration that contributed to the win of the deal</description>
    <inlineHelpText>Add the technology we support, that helped us win the deal.</inlineHelpText>
    <label>HR Tech Stack/Integration (Won)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HR_Tech_Stack_Integration</valueSetName>
    </valueSet>
</CustomField>