force-app/main/default/objects/Opportunity/fields/HR_Tech_Stack_Integration_Open__c.field-meta.xml
<CustomField>
    <fullName>HR_Tech_Stack_Integration_Open__c</fullName>
    <description>Required when Global Payroll is added to the opportunity</description>
    <label>HR Tech Stack/Integration (Open)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HR_Tech_Stack_Integration</valueSetName>
    </valueSet>
</CustomField>