force-app/main/default/objects/Opportunity/fields/I_Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>I_Identify_Pain__c</fullName>
    <inlineHelpText>This is the problem can we can solve which will make us an invaluable resource to the customer.</inlineHelpText>
    <label>I - Identify Pain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>