force-app/main/default/objects/Opportunity/fields/I_think_we_can_even_create_a_new_layout__c.field-meta.xml
<CustomField>
    <fullName>I_think_we_can_even_create_a_new_layout__c</fullName>
    <label>I think we can even create a new layout</label>
    <type>Url</type>
</CustomField>