force-app/main/default/objects/Opportunity/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <inlineHelpText>How you impact your prospect’s business</inlineHelpText>
    <label>Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>