force-app/main/default/objects/Opportunity/fields/Incremental_Amount_Scale__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Amount_Scale__c</fullName>
    <inlineHelpText>Additional cMRR from conversion to Scale. Put 0 if there is no expansion</inlineHelpText>
    <label>Incremental Amount Scale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>