force-app/main/default/objects/Opportunity/fields/Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Amount__c</fullName>
    <description>Amount when first entered Prospecting stage</description>
    <inlineHelpText>Amount when first entered Prospecting stage</inlineHelpText>
    <label>Prospecting - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>