force-app/main/default/objects/Opportunity/fields/Interest_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Date__c</fullName>
    <description>Date first entered Prospecting stage</description>
    <inlineHelpText>Date first entered Prospecting stage</inlineHelpText>
    <label>Prospecting - Date</label>
    <type>DateTime</type>
</CustomField>