force-app/main/default/objects/Opportunity/fields/Interest_Duration__c.field-meta.xml
<CustomField>
    <fullName>Interest_Duration__c</fullName>
    <description>Number of days in Prospecting stage</description>
    <inlineHelpText>Number of days in Prospecting stage</inlineHelpText>
    <label>Prospecting - Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>