force-app/main/default/objects/Opportunity/fields/Interest_Entries__c.field-meta.xml
<CustomField>
    <fullName>Interest_Entries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of times entered Prospecting stage</description>
    <inlineHelpText>Count of times entered Prospecting stage</inlineHelpText>
    <label>Prospecting - Entries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>