force-app/main/default/objects/Opportunity/fields/Last_AE_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_AE_Activity_Date__c</fullName>
    <label>Last AE Activity Date</label>
    <type>Date</type>
</CustomField>