force-app/main/default/objects/Opportunity/fields/Last_Owner_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner_Update__c</fullName>
    <description>Populated by flow Account - Stamp Owner Change Date</description>
    <label>Last Owner Update</label>
    <type>Date</type>
</CustomField>