force-app/main/default/objects/Opportunity/fields/Last_Sales_Activity_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Activity_Opportunity__c</fullName>
    <formula>IF(DATEVALUE(Last_Sales_Event_Opportunity__c) &gt; BLANKVALUE(Last_Sales_Task_Opportunity__c,DATE(1970,1,1)), DATEVALUE(Last_Sales_Event_Opportunity__c), Last_Sales_Task_Opportunity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Sales Activity (Opportunity)</label>
    <type>Date</type>
</CustomField>