force-app/main/default/objects/Opportunity/fields/Last_Sales_Event_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Event_Opportunity__c</fullName>
    <description>Populated by DLRS</description>
    <label>Last Sales Event (Opportunity)</label>
    <type>DateTime</type>
</CustomField>