force-app/main/default/objects/Opportunity/fields/Last_Sales_Task_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Task_Opportunity__c</fullName>
    <description>Populated by DLRS</description>
    <label>Last Sales Task (Opportunity)</label>
    <type>Date</type>
</CustomField>