force-app/main/default/objects/Opportunity/fields/leadassist__Round_Robin_Info2__c.field-meta.xml
<CustomField>
    <fullName>leadassist__Round_Robin_Info2__c</fullName>
    <inlineHelpText>Internal field used by SRR.</inlineHelpText>
    <label>Round Robin Info2</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>