force-app/main/default/objects/Opportunity/fields/leadassist__Round_Robin_Info__c.field-meta.xml
<CustomField>
    <fullName>leadassist__Round_Robin_Info__c</fullName>
    <inlineHelpText>Used by SuperRoundRobin.  Can be useful for debugging.</inlineHelpText>
    <label>Round Robin Info</label>
    <type>TextArea</type>
</CustomField>