force-app/main/default/objects/Opportunity/fields/leadassist__SRRIndex__c.field-meta.xml
<CustomField>
    <fullName>leadassist__SRRIndex__c</fullName>
    <inlineHelpText>Used behind the scenes by SuperRoundRobin</inlineHelpText>
    <label>SRRIndex</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>