force-app/main/default/objects/Opportunity/fields/leadassist__Use_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>leadassist__Use_Round_Robin__c</fullName>
    <inlineHelpText>Installed by SuperRoundRobin to enable automatic owner assignment of Opportunities. Set to TRUE to assign via Round Robin, set to FALSE to ignore Round Robin assignment. The value will automatically change to ASSIGNED or NOMATCH after sending to Round Robin.</inlineHelpText>
    <label>Use Round Robin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
                <default>true</default>
                <label>FALSE</label>
            </value>
            <value>
                <fullName>ASSIGNED</fullName>
            </value>
            <value>
                <fullName>NOMATCH</fullName>
            </value>
            <value>
                <fullName>QUEUED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>