force-app/main/default/objects/Opportunity/fields/Link_to_External_Slides__c.field-meta.xml
<CustomField>
    <fullName>Link_to_External_Slides__c</fullName>
    <inlineHelpText>If applicable, provide a hyperlink to an external presentation or document that further explains the &apos;3 WHYs&apos; or related project details.</inlineHelpText>
    <label>Link to External Slides</label>
    <type>Url</type>
</CustomField>