force-app/main/default/objects/Opportunity/fields/Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Date__c</fullName>
    <description>The date a new team member(s) is due to be employed from on the Oyster Platform.</description>
    <inlineHelpText>The date a new team member(s) is due to be employed from on the Oyster Platform.</inlineHelpText>
    <label>Live Date</label>
    <type>Date</type>
</CustomField>