force-app/main/default/objects/Opportunity/fields/Location_of_TMs__c.field-meta.xml
<CustomField>
    <fullName>Location_of_TMs__c</fullName>
    <inlineHelpText>Where is the prospect looking to hire these people?</inlineHelpText>
    <label>Location of TMs</label>
    <type>TextArea</type>
</CustomField>