force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <inlineHelpText>Describe the primary reason(s) why the deal was not won.</inlineHelpText>
    <label>zzz_Lost Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country coverage/direct entities</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Local HR Knowledge</fullName>
            </value>
            <value>
                <fullName>Missing Integration</fullName>
            </value>
            <value>
                <fullName>Other product gap</fullName>
            </value>
            <value>
                <fullName>Time to hire</fullName>
            </value>
            <value>
                <fullName>Unable to support Visa</fullName>
            </value>
            <value>
                <fullName>Unable to offer equity</fullName>
            </value>
            <value>
                <fullName>Unable to customise contract</fullName>
            </value>
            <value>
                <fullName>Pay (payment method, payroll cycle, ...)</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Global Payroll</fullName>
            </value>
            <value>
                <fullName>Setup Own Entity</fullName>
            </value>
            <value>
                <fullName>Client Unresponsive</fullName>
            </value>
            <value>
                <fullName>Duplicate Opp</fullName>
            </value>
            <value>
                <fullName>Misqualified</fullName>
            </value>
            <value>
                <fullName>Meeting Never Set</fullName>
            </value>
            <value>
                <fullName>No disclosed reason</fullName>
            </value>
            <value>
                <fullName>Project Empower</fullName>
            </value>
            <value>
                <fullName>Economic Downturn</fullName>
            </value>
            <value>
                <fullName>Did not hire</fullName>
            </value>
            <value>
                <fullName>Not a Priority</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Opted for contractor</fullName>
            </value>
            <value>
                <fullName>Competitive Loss</fullName>
                <isActive>false</isActive>
                <label>Competitive Loss</label>
            </value>
            <value>
                <fullName>Country Coverage</fullName>
                <isActive>false</isActive>
                <label>Country Coverage</label>
            </value>
            <value>
                <fullName>Disqualified</fullName>
                <isActive>false</isActive>
                <label>Disqualified</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Equity</fullName>
                <isActive>false</isActive>
                <label>Equity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>