force-app/main/default/objects/Opportunity/fields/Lost_Reason_Context__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Context__c</fullName>
    <inlineHelpText>Offer context or details about the win/loss reasons provided.</inlineHelpText>
    <label>Win/Loss Reason Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>