force-app/main/default/objects/Opportunity/fields/Lost_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Details__c</fullName>
    <inlineHelpText>Select one or more reason responsible for the loss of this deal.</inlineHelpText>
    <label>zzz_Lost Reason Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lost_Reason_Details</valueSetName>
    </valueSet>
</CustomField>