force-app/main/default/objects/Opportunity/fields/Lost_Reason_new__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_new__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feature gap</fullName>
            </value>
            <value>
                <fullName>Service gap (example: Visas, Benefits, Time to Hire etc)</fullName>
            </value>
            <value>
                <fullName>Country coverage/ Infrastructure</fullName>
            </value>
            <value>
                <fullName>Empower</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Did not hire</fullName>
            </value>
            <value>
                <fullName>Stayed with provider</fullName>
            </value>
            <value>
                <fullName>Stayed as contractor</fullName>
            </value>
            <value>
                <fullName>Kept own entity</fullName>
            </value>
            <value>
                <fullName>Open own entity</fullName>
            </value>
            <value>
                <fullName>Opted for contractor</fullName>
            </value>
            <value>
                <fullName>Undisclosed/other alternative</fullName>
            </value>
            <value>
                <fullName>Incorrect qualification/ Incorrectly qualified</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>