force-app/main/default/objects/Opportunity/fields/Lost_to_Comp__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Comp__c</fullName>
    <inlineHelpText>Indicate whether the deal was lost to a competing offer.</inlineHelpText>
    <label>Lost to Competitor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>